# COMP309-Final-Project

./: Makefile  README.md  pyproject.toml
cnnproject/: __init__.py  config.py  dataset.py  features.py  plots.py
cnnproject/modeling/: predict.py  train.py
notebooks/: EDA.ipynb  testingandploting.ipynb
reports/: CNN_epoch_9_metrics.txt  basicNN_metrics.txt
